# masklint

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  flake.nix  maskfile.md  rust-toolchain.toml
.github/actions/nix-setup/: action.yml
src/: main.rs
test/: maskfile.md
