[package]
name = "masklint"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.22", features = ["derive"] }
mask-parser = "0.2.1"
owo-colors = "3.5.0"
tempfile = "3.7.1"
